# swfdec__swfdec-directfb

./: Makefile.am  configure.ac
data/: .gitignore  Makefile.am  swfdec-directfb.pc.in
player/: .gitignore  Makefile.am  main.c
swfdec-directfb/: .gitignore  Makefile.am  swfdec-directfb.h  swfdec_directfb_main.c  swfdec_directfb_main.h  swfdec_directfb_player.c  swfdec_directfb_player.h  swfdec_directfb_renderer.c  swfdec_directfb_renderer.h
test/: .gitignore  Makefile.am  bench.c
